fix transcript overflow

--- a/app/assets/stylesheets/directory/base.css.scss
+++ b/app/assets/stylesheets/directory/base.css.scss
@@ -503,6 +503,13 @@ img.media-object {
     background-color: #FFFBCC;
   }
 
+  .file-transcript-text {
+    width: 800px;
+    max-width: 800px;
+    height: 22px;
+    overflow: hidden;
+  }
+
   table {
     td {
       padding: 2px;
